# student_menagement

./: .gitignore  README.md  course.py  course_schema.py  course_service.py  db.py  exception.py  exceptions.py  grade.py  grade_service.py  jwt.py  login.py  main.py  models.py  pyproject.toml  schema.py  service.py  setting.py  settings.py  student.py  student_schema.py  student_service.py  students.py  test.py  user.py  user_schema.py  user_service.py  users_service.py  utility.py
